[tool.poetry]
name = "proy"
version = "0.1.0"
description = ""
authors = ["Tomás Lucas <tomaslucas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.9"
black = "^22.1.0"
pytest = "^7.0.0"
pytest-regressions = "^2.3.1"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
sphinx-copybutton = "^0.4.0"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
